# D1G1T4L-SH3LL

B0TZ/M1NDB0T-GROQ/: M1NDB0T-FAST-CARTESIA.py  M1NDB0T-FAST-DEV.py  M1NDB0T-FAST-ELEVINLABS.py  M1NDB0T-FAST-FISH.py  M1NDB0T-FAST-Google.py
M1NDB0T-B3TA/: M1NDB0T.py  VortexAI.py  personalities-DATABASE.json  personalities.json
examples/D1G1T4L-HUM4N5/Mindbot/: main.py  personality.json  requirements.txt  setup_mindbot.py
examples/D1G1T4L-HUM4N5/Mindbot/Mods/: __init__.py  crypto.py  jokes.py  music.py  news.py  reminders.py  time.py  translation.py  weather.py
examples/D1G1T4L-HUM4N5/Mindbot/codex/: mindbot.md
examples/D1G1T4L-HUM4N5/Mindbot/config/: config.py
examples/D1G1T4L-HUM4N5/Mindbot/utils/: logger.py  tools.py
examples/M1NDB0T/: M1NDB0T-ELEVENLABS.py  M1NDB0T-OPENAI.py  M1NDB0T-Persona.py  README.md
examples/voice-assistant/: minimal_assistant.py
src/: CMakeLists.txt
